--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   get_it: ^7.1.3
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
+  firebase_core: ^1.6.0
+  firebase_crashlytics: ^2.8.2
 
 dev_dependencies:
   mockito: ^5.0.8
